--- a/style.css
+++ b/style.css
@@ -1,15 +1,27 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
     width: 100%;
     height: 100vh;
-    background: url(header_bg.webp);
+    background: url('header_bg.webp') no-repeat center center;
     background-size: cover;
     display: flex;
 }
+
+.header_left h1 {
+    margin: 0;
+    font-size: 4vw;
+}
+
+.header_left .bio {
+    font-size: 1vw;
+    max-width: 500px; 
+}
+
 
 .header_left {
     width: 65%;
